--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "devDependencies": {
-    "gulp": "^4.0.2"
-  },
   "dependencies": {
+    "gulp": "^4.0.2",
     "csv-parser": "^3.0.0",
     "del": "^6.0.0",
     "dotenv": "^10.0.0",
