--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "csv-parser": "^3.0.0",
     "del": "^6.0.0",
     "dotenv": "^10.0.0",
+    "es6-promise-pool": "^2.5.0",
     "event-stream": "^4.0.1",
     "gulp": "^4.0.2",
     "gulp-debug": "^4.0.0",
