--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "es6-promise-pool": "^2.5.0",
     "event-stream": "^4.0.1",
     "gulp": "^4.0.2",
-    "gulp-debug": "^4.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.3",
-    "merge-stream": "^2.0.0",
-    "papaparse": "^5.3.1"
+    "which": "^2.0.2"
+  },
+  "devDependencies": {
+    "gulp-debug": "^4.0.0"
   }
 }
